base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dt65-events-api
spec:
  replicas: 1
  template:
    metadata:
      name: dt65-events-api
      labels:
        app: dt65-events-api
    spec:
      containers:
        - name: dt65-events-api
          image: pehtoorismies/dt65-events-api:master
          ports:
            - name: graphql
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /graphql?query={liveness}
              port: graphql
          readinessProbe:
            httpGet:
              path: /graphql?query={readiness}
              port: graphql
