base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dt65-events-api-service
spec:
  selector:
    deployment: dt65-events-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4001
      targetPort: graphql
