base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dt65-events-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-issuer"
spec:
  tls:
    - hosts:
        - replace.me.com
      secretName: tls-secret
  rules:
    - host: replace.me.com
      http:
        paths:
          - path: /
            backend:
              serviceName: dt65-events-api-service
              servicePort: 4001
